// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Spacing Component correctly 1`] = `
<div
  className="sc-jKJlTe gQiYVm"
  scale={undefined}
/>
`;

exports[`renders the Spacing Component correctly 2`] = `
<div
  className="sc-jKJlTe bdWLxj"
  scale="xxl"
/>
`;

exports[`renders the Spacing Component correctly 3`] = `
<div
  className="sc-eNQAEJ jrmYtL"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 4`] = `
<div
  className="sc-eNQAEJ ciqfQ"
  scale="xxl"
>
  Spacing
</div>
`;

exports[`renders the Spacing Component correctly 5`] = `
<div
  className="sc-eNQAEJ BJbUw"
  scale="xxl"
>
  Spacing
</div>
`;
